infra/kubernetes/services/ui/ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: ui
    task: ui
