infra/kubernetes/services/ui/ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: news-agg.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ui
          servicePort: ui-http
